infrastructure/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-manga2you
spec:
  template:
    spec:
      containers:
        - name: backend-manga2you-container
          image: saberbenhamda0/backend_manga2you:89
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
            requests:
              cpu: 700m
              memory: 1Gi
