infrastructure/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-manga2you
  labels:
    app: backend-manga2you
    role: stable
spec:
  type: ClusterIP
  ports:
    - name: backend-manga2you-port
      port: 9632
      targetPort: 9632
      nodePort: 32000
# spec:
#   type: LoadBalancer
#   ports:
#     - name: backend-manga2you-port
#       port: 9632
#       targetPort: 9632
